--- a/1Mainpage.css
+++ b/1Mainpage.css
@@ -125,10 +125,10 @@ article p::first-line{
 }
 
 section.join{
-    background: black;
+    background-image: url(Images/gifbg4.gif);
     text-align: center;
     padding: 60px 20px;
-    color: #4b4b4b;
+    color: #ffffff;
 }
 
 .join h2{
@@ -145,6 +145,7 @@ form input{
 
 form input::placeholder{
     font-family: 'Regular';
+    color: rgb(151, 151, 151);
 }
 footer{
     background: #ff7d25;
@@ -648,14 +649,31 @@ span {
     padding: 0;
 }
 /*Responsive Styles*/
+body {
+    background-image: url(Images/gifbg4.gif);
+    background-size: 30%;
+}
+ul, li {
+    background-image: url(Images/gifbg4.gif);
+}
 
+header {
+    background-image: url(Images/gifbg4.gif);
+}
+
+.solar_system {
+    background-image: url(Images/gifbg4.gif);
+    background-size: 25%;
+}
+.main-nav {
+    background-image: url(Images/gifbg4.gif);
+}
+{
+    background-color: transparent;
+}
 @media screen and (max-width: 1400px){
     nav li {
         font-size: 20px;
-    }
-    .bodystandee {
-        margin-top: 7%;
-        transform: scale(120%);
     }
 }
 
