--- a/InfoStyles.css
+++ b/InfoStyles.css
@@ -32,7 +32,8 @@ body, ul, li, a{
     margin: 0;
     padding: 0;
     font-family: 'Regular';
-    background-color: black;
+    background-image: url(Images/gifbg4.gif);
+    background-size: 30%;
 }
 
 p {
